--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@
             <artifactId>vavr</artifactId>
             <version>0.10.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.7.2</version>
+        </dependency>
     </dependencies>
 
     <modules>
