--- a/stream-service/pom.xml
+++ b/stream-service/pom.xml
@@ -14,19 +14,30 @@
     <name>stream-service</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <scala.version>2.11</scala.version>
+        <flink.client.version>1.12.0</flink.client.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_2.11</artifactId>
-            <version>1.12.0</version>
+            <artifactId>flink-streaming-java_${scala.version}</artifactId>
+            <version>${flink.client.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-clients_2.11</artifactId>
-            <version>1.12.0</version>
+            <artifactId>flink-clients_${scala.version}</artifactId>
+            <version>${flink.client.version}</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-kafka_${scala.version}</artifactId>
+            <version>${flink.client.version}</version>
         </dependency>
 
         <dependency>
@@ -42,6 +53,7 @@
             <version>1.2.17</version>
             <scope>runtime</scope>
         </dependency>
+
     </dependencies>
 
     <build>
