--- a/stream-service/pom.xml
+++ b/stream-service/pom.xml
@@ -40,6 +40,32 @@
             <version>${flink.client.version}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.apache.flink</groupId>-->
+<!--            <artifactId>flink-table-api-java</artifactId>-->
+<!--            <version>${flink.client.version}</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+        <!--            <groupId>org.apache.flink</groupId>-->
+        <!--            <artifactId>flink-table-api-java-bridge_${scala.version}</artifactId>-->
+        <!--            <version>${flink.client.version}</version>-->
+        <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-planner-blink_${scala.version}</artifactId>
+            <version>${flink.client.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc_2.11</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
@@ -53,6 +79,7 @@
             <version>1.2.17</version>
             <scope>runtime</scope>
         </dependency>
+
 
     </dependencies>
 
