--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ growth.iml
 lean_algorithm/target
 lean_algorithm/lean_algorithm.iml
 
+learn-proxy/target
+learn-proxy/learn-proxy.iml
+
 stream-service/target
 stream-service/stream-service.iml
 
