--- a/stream-service/pom.xml
+++ b/stream-service/pom.xml
@@ -32,6 +32,20 @@
             <artifactId>flink-clients_${scala.version}</artifactId>
             <version>${flink.client.version}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.flink</groupId>
+                    <artifactId>flink-java</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.flink</groupId>
+                    <artifactId>flink-runtime_2.11</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -40,13 +54,25 @@
             <version>${flink.client.version}</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.apache.flink</groupId>-->
-<!--            <artifactId>flink-table-api-java</artifactId>-->
-<!--            <version>${flink.client.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc_${scala.version}</artifactId>
+            <version>${flink.client.version}</version>
+        </dependency>
 
-<!--        <dependency>-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.21</version>
+        </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.flink</groupId>-->
+        <!--            <artifactId>flink-table-api-java</artifactId>-->
+        <!--            <version>${flink.client.version}</version>-->
+        <!--        </dependency>-->
+
+        <!--        <dependency>-->
         <!--            <groupId>org.apache.flink</groupId>-->
         <!--            <artifactId>flink-table-api-java-bridge_${scala.version}</artifactId>-->
         <!--            <version>${flink.client.version}</version>-->
@@ -59,10 +85,16 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.flink</groupId>-->
+        <!--            <artifactId>flink-connector-jdbc_2.11</artifactId>-->
+        <!--            <version>1.12.0</version>-->
+        <!--        </dependency>-->
+
         <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-connector-jdbc_2.11</artifactId>
-            <version>1.12.0</version>
+            <groupId>com.alibaba.ververica</groupId>
+            <artifactId>flink-sql-connector-mysql-cdc</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
 
