--- a/stream-service/pom.xml
+++ b/stream-service/pom.xml
@@ -121,6 +121,12 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>com.shekhargulati</groupId>
+            <artifactId>strman</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+
 
     </dependencies>
 
