--- a/stream-service/pom.xml
+++ b/stream-service/pom.xml
@@ -79,6 +79,13 @@
             <version>1.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-json</artifactId>
+            <version>${flink.client.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
