--- a/stream-service/pom.xml
+++ b/stream-service/pom.xml
@@ -86,6 +86,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep_2.12</artifactId>
+            <version>1.12.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
