--- a/gogogo/pom.xml
+++ b/gogogo/pom.xml
@@ -13,5 +13,31 @@
     <version>1.0-SNAPSHOT</version>
     <name>gogogo</name>
     <url>http://maven.apache.org</url>
-    
+
+    <properties>
+        <testable.version>0.6.0</testable.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.testable</groupId>
+            <artifactId>testable-all</artifactId>
+            <version>${testable.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -javaagent:${settings.localRepository}/com/alibaba/testable/testable-agent/${testable.version}/testable-agent-${testable.version}.jar
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
