--- a/gogogo/pom.xml
+++ b/gogogo/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <testable.version>0.6.0</testable.version>
+        <settings.localRepository>/Users/tank198435163.com/.m2/repository</settings.localRepository>
     </properties>
 
     <dependencies>
@@ -24,6 +25,11 @@
             <artifactId>testable-all</artifactId>
             <version>${testable.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
         </dependency>
     </dependencies>
 
