--- a/gogogo/pom.xml
+++ b/gogogo/pom.xml
@@ -15,8 +15,9 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <testable.version>0.6.0</testable.version>
+        <testable.version>0.6.2</testable.version>
         <settings.localRepository>/Users/tank198435163.com/.m2/repository</settings.localRepository>
+        <maven.test.skip>false</maven.test.skip>
     </properties>
 
     <dependencies>
@@ -25,11 +26,6 @@
             <artifactId>testable-all</artifactId>
             <version>${testable.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -44,6 +40,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
                         -javaagent:${settings.localRepository}/com/alibaba/testable/testable-agent/${testable.version}/testable-agent-${testable.version}.jar
